--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     
-    <script src="callbacknew/index.js"></script>
+    <script src="callbacknew/challange.js"></script>
 </body>
 </html>
